# FairShare

./: .dockerignore  .gitattributes  .gitignore  CITATION.cff  CLEANUP_SUMMARY.md  CONTRIBUTING.md  FINAL_CLEANUP_SUMMARY.md  LICENSE  Makefile  NEXT_STEPS.md  OPTIONAL_TASKS_COMPLETE.md  PAPER_ARTIFACTS.md  PHASE1_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE4_COMPLETE.md  PHASE4_IMPLEMENTATION.md  PHASE5_IMPLEMENTATION.md  PHASE6_IMPLEMENTATION.md  README.md  RESEARCH_METHODOLOGY.md  RESEARCH_NEXT_STEPS.md  RESULTS_VERIFICATION.md  SIMULATION_WORKFLOW_COMPLETE.md  STRUCTURE_CHECK.md  TEST_RESULTS.md  VERIFICATION_SUMMARY.md  benchmark_scalability.py  environment.yml  main.tex  pyproject.toml  requirements.txt  setup.py  verify_framework.py
.devcontainer/: CERTIFICATE_FIX.md  DEVCONTAINER_ANALYSIS.md  QUICK_FIX.md  README.md  build-docker.sh  devcontainer-gpu1.json  devcontainer.json  fix-certificates.sh  fix-docker-certificates.sh  post-create.sh  run-gpu1.sh
data/: .gitkeep  traffic_patterns.npy
docker/: .dockerignore.dev  .gitkeep  BUILD_AND_RUN.md  Dockerfile  Dockerfile.dev  Dockerfile.final  PHASE0_README.md  QUICK_START.md  QUICK_START_DEV.md  README.dev.md  README.md  RUN_EXPERIMENTS.md  TROUBLESHOOTING.md  compose.yaml  dev-start.sh  docker-compose.dev.yaml  docker-compose.yaml  install_openntn.sh  quick_start.sh
experiments/: __init__.py  ablation_study.py  benchmark_inference.py  generate_plots.py
notebooks/: demo_fairness.ipynb  interactive_demo.ipynb  interactive_demo_old.ipynb
plots/: summary_report.txt
results/: REAL_RESULTS_SUMMARY.md
scripts/: adversarial_scenarios.py  analyze_priority_results.py  check_jain_variation.py  cleanup_old_files.sh  debug_allocation_logic.py  debug_spectrum_env.py  download_tle_files.sh  extract_paper_results.py  generate_elegant_figures.py  generate_paper_tables.py  monitor_gpu.sh  operator_scalability_study.py  plot_workshop_results.py  run_all_experiments.sh  run_full_simulation.py  run_geographic_inequality_test.py  run_inverted_elevation_study.py  (+11 more)
(+531 files in other folders)
